@@ -8,6 +8,7 @@ next
 
   [Changed]
   - On startup, the pointer is now warped to the selected monitor.
+  - DestroyNotify events are now ignored.
 
   [Added]
   - Support for ICCCM input focus models and WM_TAKE_FOCUS.
